# AsteroidsArena2

./: .gitignore  CHANGELOG.md  DesignDocument.md  README.md  asteroidsArena.cabal  design.md  package.yaml  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/ea25496e/: cabal_macros.h
levels/: JAWS.json  The Box.json  catapult.json  centrifuge.json  cube.json  default1 - empty.json  default2 - box.json  default3 - triangle.json  default4 - ManyGon.json  default5 - Twisty Line.json  nee.json  test.json  theBox.aa2l  thinline.json  waaat.json  yole.json
levels/default/: 1 - empty.json  1.json  2 - box.json  2.json  3 - triangle.json  4 - ManyGon.json  4 - box2.json  5 - Twisty Line.json  empty.json
levels/levels/default/: 1 - empty.json  2 - box.json  3 - triangle.json  4 - ManyGon.json  5 - Twisty Line.json
src/: AFunctions.hs  Arbitrary.hs  Asteroid.hs  AsteroidSpawnFunctions.hs  Bullet.hs  Colors.hs  Constants.hs  Controller.hs  CoordCalc.hs  DefaultLevels.hs  EditorModel.hs  ExitStrings.hs  FISQ.hs  GameWall.hs  GeneralHelperFunctions.hs  Hasa.hs  InitWall.hs  Input.hs  JSONfuncs.hs  Level.hs  LevelHelperFunctions.hs  LevelImport.hs  Main.hs  Model.hs  NoPrereqs.hs  ParenthesesHelpers.hs  Physics.hs  Pictured.hs  Player.hs  Point.hs  PointHelpers.hs  Rotation.hs  Select.hs  Sprites.hs  Stars.hs  Test.hs  TypeClasses.hs  Types.hs  Types1.hs  VFunctionHelpers.hs  (+8 more)
tests/: Arbitrary.hs  testSuite.hs
