name:                asteroidsArena
version:             0.1.0.0
author:              Noa Aarts and Morris Roskam
maintainer:          itepastra@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10


Test-Suite projectname-testsuite
  Type:                     exitcode-stdio-1.0
  Main-is:                  testSuite.hs
  hs-source-dirs:           tests,
                            src
  Build-depends:            base >= 4,
                            QuickCheck,
                            safe
  other-modules:            AFunctions
                          , ParenthesesHelpers 
                          , Types1

executable editor
  main-is:            levelCreator.hs
  build-depends:       base >= 4,
                       gloss,
                       safe,
                       aeson,
                       random,
                       containers,
                       directory,
                       directory-tree
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       AFunctions
                     , Types1
                     , ParenthesesHelpers
                     , Asteroid
                     , AsteroidSpawnFunctions
                     , Bullet
                     , Colors
                     , Constants
                     , EditorModel
                     , FISQ
                     , JSONfuncs
                     , Level
                     , LevelHelperFunctions
                     , LevelImport
                     , Model
                     , Physics
                     , Player
                     , Rotation
                     , Select
                     , Sprites
                     , TypeClasses
                     , VectorCalc
                     , Wall
                     , Pictured
                     
executable aa2
  ghc-options:         -threaded
  main-is:             main.hs
  build-depends:       base >= 4,
                       gloss,
                       random,
                       containers,
                       aeson,
                       directory-tree,
                       text,
                       directory,
                       ghc-prim,
                       safe
  hs-source-dirs:      src
  other-modules:       AFunctions
                     , Asteroid
                     , AsteroidSpawnFunctions
                     , Bullet
                     , Colors
                     , Constants
                     , Controller
                     , DefaultLevels
                     , ExitStrings
                     , FISQ
                     , Input
                     , JSONfuncs
                     , Level
                     , LevelHelperFunctions
                     , LevelImport
                     , Model
                     , ParenthesesHelpers
                     , Physics
                     , Pictured
                     , Player
                     , Rotation
                     , Select
                     , Sprites
                     , Stars
                     , TypeClasses
                     , Types1
                     , VectorCalc
                     , View
                     , Wall
                     , EditorModel
  default-language:    Haskell2010