name:                asteroidsArena
version:             0.1.0.0
author:              Noa Aarts and Morris Roskam
maintainer:          itepastra@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10


Test-Suite projectname-testsuite
  ghc-options:         -threaded 
  Type:                     exitcode-stdio-1.0
  Main-is:                  testSuite.hs
  hs-source-dirs:           tests,
                            src
  Build-depends:            base >= 4,
                            QuickCheck,
                            safe,
                            gloss,
                            random,
                            aeson,
                            containers
  other-modules:            ParenthesesHelpers 
                          , Types1
                          , Arbitrary
                          , Colors
                          , Constants
                          , FISQ
                          , Physics
                          , PointHelpers
                          , Rotation
                          , Sprites
                          , TypeClasses
                          , VectorCalc
                          , Wall
                          , NoPrereqs
                          , VFunctions
                          , VFunctionHelpers
                          , Asteroid
                          , AsteroidSpawnFunctions
                          , Bullet
                          , JSONfuncs
                          , Level
                          , Model
                          , Player

executable editor
  ghc-options:         -threaded
  main-is:            levelCreator.hs
  build-depends:       base >= 4,
                       gloss,
                       safe,
                       aeson,
                       random,
                       containers,
                       directory,
                       directory-tree,
                       QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       Types1
                     , ParenthesesHelpers
                     , Asteroid
                     , AsteroidSpawnFunctions
                     , Bullet
                     , Colors
                     , Constants
                     , EditorModel
                     , FISQ
                     , JSONfuncs
                     , Level
                     , LevelHelperFunctions
                     , LevelImport
                     , Model
                     , Physics
                     , Player
                     , PointHelpers
                     , Rotation
                     , Select
                     , Sprites
                     , TypeClasses
                     , VectorCalc
                     , Wall
                     , Pictured
                     , NoPrereqs
                     , VFunctions
                     , VFunctionHelpers
                     
executable aa2  
  ghc-options:         -threaded
  main-is:             main.hs
  build-depends:       base >= 4,
                       gloss,
                       random,
                       containers,
                       aeson,
                       directory-tree,
                       text,
                       directory,
                       ghc-prim,
                       safe
  hs-source-dirs:      src
  other-modules:       Asteroid
                     , AsteroidSpawnFunctions
                     , Bullet
                     , Colors
                     , Constants
                     , Controller
                     , DefaultLevels
                     , ExitStrings
                     , FISQ
                     , Input
                     , JSONfuncs
                     , Level
                     , LevelHelperFunctions
                     , LevelImport
                     , Model
                     , ParenthesesHelpers
                     , Physics
                     , PointHelpers
                     , Pictured
                     , Player
                     , Rotation
                     , Select
                     , Sprites
                     , Stars
                     , TypeClasses
                     , Types1
                     , VectorCalc
                     , View
                     , Wall
                     , EditorModel
                     , NoPrereqs
                     , VFunctions
                     , VFunctionHelpers
  default-language:    Haskell2010