name:                asteroidsArena
version:             0.1.0.0
author:              Noa Aarts and Morris Roskam
maintainer:          itepastra@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10


Test-Suite projectname-testsuite
  ghc-options:        -threaded 
  Type:               exitcode-stdio-1.0
  Main-is:            testSuite.hs
  hs-source-dirs:     tests,
                      src
  Build-depends:      base >= 4,
                      QuickCheck,
                      safe,
                      gloss,
                      random,
                      aeson,
                      containers
  other-modules:      Types1
                    , Arbitrary
                    , Colors
                    , Constants
                    , FISQ
                    , GameWall
                    , GeneralHelperFunctions
                    , InitWall
                    , JSONfuncs
                    , ParenthesesHelpers
                    , Pictured
                    , PointHelpers
                    , Rotation
                    , Sprites
                    , TypeClasses
                    , VFunctionHelpers
                    , VFunctions
                    , VectorCalc
                    , Wall

executable editor
  ghc-options:        -threaded
  main-is:            levelCreator.hs
  build-depends:      base >= 4,
                      gloss,
                      safe,
                      aeson,
                      random,
                      containers,
                      directory,
                      directory-tree,
                      QuickCheck
  hs-source-dirs:     src
  default-language:   Haskell2010
  other-modules:      Types1
                    , AsteroidSpawnFunctions
                    , Colors
                    , Constants
                    , EditorModel
                    , FISQ
                    , GameWall
                    , GeneralHelperFunctions
                    , InitWall
                    , JSONfuncs
                    , Level
                    , LevelHelperFunctions
                    , LevelImport
                    , ParenthesesHelpers
                    , Pictured
                    , PointHelpers
                    , Rotation
                    , Select
                    , Sprites
                    , TypeClasses
                    , VFunctionHelpers
                    , VFunctions
                    , VectorCalc
                    , Wall
                  
executable aa2  
  ghc-options:        -threaded
  main-is:            main.hs
  build-depends:      base >= 4,
                      gloss,
                      random,
                      containers,
                      aeson,
                      directory-tree,
                      text,
                      directory,
                      ghc-prim,
                      safe
  hs-source-dirs:     src
  other-modules:      Types1
                    , Asteroid
                    , AsteroidSpawnFunctions
                    , Bullet
                    , Colors
                    , Constants
                    , Controller
                    , DefaultLevels
                    , ExitStrings
                    , FISQ
                    , GameWall
                    , GeneralHelperFunctions
                    , InitWall
                    , Input
                    , JSONfuncs
                    , Level
                    , LevelHelperFunctions
                    , LevelImport
                    , Model
                    , ParenthesesHelpers
                    , Physics
                    , Pictured
                    , Player
                    , PointHelpers
                    , Rotation
                    , Select
                    , Sprites
                    , Stars
                    , TypeClasses
                    , VFunctionHelpers
                    , VFunctions
                    , VectorCalc
                    , View
                    , Wall
  default-language:    Haskell2010